# monopod_description

./: CMakeLists.txt  README.md  package.xml
cmake/: doxygen.cmake  doxygen.cmake~
doc/: Doxyfile.extra.in
meshes/: monopod_base.dae  monopod_leg.dae
script/: monopod_test.py
src/hpp/corbaserver/monopod_mesh/: robot.py  robot.py~
srdf/: monopod.srdf  monopod_mesh.srdf
urdf/: monopod.urdf  monopod_mesh.urdf
